--- a/components/Page/Page.css
+++ b/components/Page/Page.css
@@ -4,4 +4,7 @@
   margin-top: 2%;
   margin-bottom: 2%;
   padding-bottom: 2%;
+  -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
 }
