--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -1,25 +1,36 @@
-#navbar-grid{
+#navbar-grid {
   display: grid;
+  grid-template: 60px / 1fr 1fr 1fr;
   width: 100%;
   background-color: #374457;
   color: white;
+  font-size: 1.5em;
+  font-weight: 300;
+  font-family: Roboto, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  height: 100%;
+  justify-content: center;
   align-items: center;
-  grid-template: 3em/ 1fr 1fr 1fr;
-  font-size: 1em;
-  height: 3em;
+  -webkit-transition: background .3s;
+  -moz-transition: background .3s;
+  -ms-transition: background .3s;
+  -o-transition: background .3s;
+  transition: background .3s;
 }
 
-a{
-  color:inherit;
-  padding: .9em 1em;
-  -webkit-transition: background-color .3s ease;
-  -moz-transition: background-color .3s ease;
-  -ms-transition: background-color .3s ease;
-  -o-transition: background-color .3s ease;
-  transition: background-color .3s ease;
+a:hover {
+  color: inherit;
+  background: #556070;
 }
 
-a:hover{
-  color:inherit;
-  background-color: #686671;
+#navbar-email {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
