--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
@@ -23,7 +23,7 @@
 
 #card:hover{
   padding: 1.1em 1em;
-  width: 35%;
+  width: 31%;
   -webkit-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.41);
   -moz-box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.41);
   box-shadow: 0px 0px 3px 2px rgba(0,0,0,0.41);
@@ -54,9 +54,14 @@
   margin-right: .25em;
 }
 
-#card-github-button{
+#card-buttons{
   color: #374457;
+  @include transition(color .3s)
+  &:hover{
+    color: #556070;
+  }
 }
+
 
 #card-date{
   font-weight: 300;
