--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
@@ -17,8 +17,7 @@
   -moz-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
   box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.25);
   border-radius: .25em;
-  @include transition(box-shadow .3s)
-  @include transition(width .3s)
+  @include transition(box-shadow .3s, width .3s)
 }
 
 #card:hover{
