--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
@@ -1,7 +1,7 @@
 #card {
   display: grid;
   grid-template: 2.85em 1.15em 1fr / 1fr;
-  width: 30%;
+  width: 50%;
   margin: 1.5em 0em;
   padding: 1em;
   font-family: Roboto, sans-serif;
@@ -18,7 +18,7 @@
 
 #card:hover {
   padding: 1.1em 1em;
-  width: 31%;
+  width: 50.5%;
   -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
   -moz-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
@@ -86,6 +86,11 @@ ul {
   list-style-type: circle;
 }
 
-img {
+#image-container {
   width: 100%;
+  text-align: center;
+}
+
+img {
+  width: 75%;
 }
