--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -7,6 +7,10 @@
   font-size: 1.5em;
   font-weight: 300;
   font-family: Roboto, sans-serif;
+  border-top: solid 1px #27303D;
+  -webkit-box-shadow: 2px 4px 8px rgba(0,0,0,0.3);
+  -moz-box-shadow: 2px 4px 8px rgba(0,0,0,0.3);
+  box-shadow: 2px 4px 8px rgba(0,0,0,0.3);
 }
 
 #navbar-link {
