--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -1,11 +1,34 @@
 #header-container{
-  margin-top: 2%;
-  margin-bottom: 2%;
+  background-color: #374457;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  color: #fafafa;
+  font-family: 'Roboto', sans-serif;
+  font-size: 4em;
 }
 
-h1{
-  color: #374457;
-  font-size: 4em;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 700;
+#header-text{
+  line-height: 1.25em;
+  -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+}
+
+#header-image{
+  width: 250px;
+  border-radius: 50%;
+  /* border: .1em solid #3F4D63; */
+  -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
 }
