--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -4,8 +4,9 @@
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   color: #fafafa;
   font-family: 'Roboto', sans-serif;
   font-size: 4em;
@@ -31,4 +32,14 @@
   box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);
+}
+
+#header-bottom-text{
+  align-items: flex-end;
+  font-size: .3em;
+  line-height: 1em;
+  padding-bottom: .25%;
+  -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
 }
