--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -1,4 +1,64 @@
-#header-container{
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  20% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+@-moz-keyframes fade-in {
+  0% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  20% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+@-o-keyframes fade-in {
+  0% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  20% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  20% {
+    opacity: 0;
+    margin-top: -50px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+#header-container {
   background-color: #374457;
   height: 100vh;
   width: 100vw;
@@ -12,34 +72,28 @@
   font-size: 4em;
 }
 
-#header-text{
+#header-text {
   line-height: 1.25em;
-  -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
-  -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
+  -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
 }
 
-#header-image{
+#header-image {
   width: 250px;
   border-radius: 50%;
   /* border: .1em solid #3F4D63; */
-  -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);
-  box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-             0px 8px 13px rgba(0,0,0,0.1),
-             0px 18px 23px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
-#header-bottom-text{
+#header-bottom-text {
   align-items: flex-end;
   font-size: .3em;
   line-height: 1em;
   padding-bottom: .25%;
-  -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
-  -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
-  text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
+  -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
 }
