--- a/src/components/Page/PageHeader/PageHeader.scss
+++ b/src/components/Page/PageHeader/PageHeader.scss
@@ -1,3 +1,31 @@
+@mixin animation($args...) {
+  -webkit-animation: $args;
+  -moz-animation: $args;
+  -o-animation: $args;
+  animation: $args;
+}
+
+@-webkit-keyframes fade-in {
+  0%   { opacity: 0; margin-top: -50px;}
+  20%   { opacity: 0; margin-top: -50px;}
+  100% { opacity: 1; margin-top: 0px;}
+}
+@-moz-keyframes fade-in {
+  0%   { opacity: 0; margin-top: -50px;}
+  20%   { opacity: 0; margin-top: -50px;}
+  100% { opacity: 1; margin-top: 0px;}
+}
+@-o-keyframes fade-in {
+  0%   { opacity: 0; margin-top: -50px;}
+  20%   { opacity: 0; margin-top: -50px;}
+  100% { opacity: 1; margin-top: 0px;}
+}
+@keyframes fade-in {
+  0%   { opacity: 0; margin-top: -50px;}
+  20%   { opacity: 0; margin-top: -50px;}
+  100% { opacity: 1; margin-top: 0px;}
+}
+
 #header-container{
   background-color: #374457;
   height: 100vh;
@@ -17,6 +45,7 @@
   -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
   -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
   text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  // @include animation(fade-in 4s)
 }
 
 #header-image{
@@ -32,6 +61,7 @@
   box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);
+  // @include animation(fade-in 4s)
 }
 
 #header-bottom-text{
