--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   grid-template: 60px / 1fr 1fr 1fr;
   width: 100%;
   background-color: #374457;
-  color: white;
+  color: #fafafa;
   font-size: 1.5em;
   font-weight: 300;
   font-family: Roboto, sans-serif;
