--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,5 +1,5 @@
 #page-container{
-  background-color: white;
+  background-color: #fafafa;
   width: 100%;
   -webkit-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.75);
