--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
@@ -1,5 +1,6 @@
-#card {
+.card {
   display: grid;
+  background-color: white;
   grid-template: 2.85em 1.15em 1fr / 1fr;
   width: 50%;
   margin: 1.5em 0em;
@@ -16,7 +17,25 @@
   transition: box-shadow 0.1s, width 0.1s;
 }
 
-#card:hover {
+.card.small .card-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card.small .card-details {
+  font-size: 1.1em;
+}
+
+.card.small .image-container {
+  align-self: center;
+  width: 100%;
+}
+
+.card.small .image-container img {
+  height: 100%;
+}
+
+.card:hover {
   padding: 1.1em 1em;
   width: 50.5%;
   -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
@@ -24,21 +43,21 @@
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
 }
 
-#card-header {
+.card-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   grid-area: 1/1;
 }
 
-#card-title {
+.card-title {
   display: inline;
   font-weight: bold;
   color: #374457;
   font-size: 2em;
 }
 
-#card-header-language {
+.card-header-language {
   display: inline-flex;
   background-color: #fbbd08;
   color: white;
@@ -49,7 +68,7 @@
   margin-right: .25em;
 }
 
-#card-buttons {
+.card-buttons {
   color: #374457;
   -webkit-transition: color 0.3s;
   -moz-transition: color 0.3s;
@@ -58,18 +77,18 @@
   transition: color 0.3s;
 }
 
-#card-buttons:hover {
+.card-buttons:hover {
   color: #556070;
 }
 
-#card-date {
+.card-date {
   font-weight: 300;
   color: black;
   grid-row: 2;
   font-size: 1.05em;
 }
 
-#card-content {
+.card-content {
   grid-row: 3;
   display: flex;
   justify-content: center;
@@ -77,7 +96,7 @@
   flex-direction: column;
 }
 
-#card-details {
+.card-details {
   font-size: 1.25em;
   line-height: 1.5em;
 }
@@ -86,7 +105,7 @@ ul {
   list-style-type: circle;
 }
 
-#image-container {
+.image-container {
   width: 100%;
   text-align: center;
 }
