--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -96,4 +96,6 @@
   -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
+  text-decoration: none;
+  color: inherit;
 }
