--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
@@ -26,6 +26,7 @@
     grid-template-columns: 1fr 1fr;
   }
   .card-details{
+    align-self: center;
     font-size: 1.1em;
   }
   .image-container{
