--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #374457;
   color: #fafafa;
-  font-size: 1.5em;
+  font-size: 1.5vw;
   font-weight: 300;
   font-family: Roboto, sans-serif;
   border-top: solid 1px #27303D;
@@ -13,7 +13,8 @@
   box-shadow: 2px 4px 8px rgba(0,0,0,0.3);
 }
 
-#navbar-link {
+
+.navbar-link {
   color: inherit;
   text-decoration: none;
   display: flex;
@@ -27,12 +28,26 @@
   transition: background .3s;
 }
 
-#navbar-link:hover {
+@media (max-width: 1000px){
+  #navbar-grid{
+    display: none;
+    font-size: 2vw;
+    /* grid-template: 7em / 1fr 1fr 1fr; */
+    /* font-size: 1em; */
+  }
+  .navbar-link{
+    font-size: 3em;
+  }
+  .navbar-link-text{
+    display: none;
+  }
+}
+.navbar-link:hover {
   color: inherit;
   background: #556070;
 }
 
-#navbar-email {
+.navbar-email {
   display: flex;
   height: 100%;
   justify-content: center;
