--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
@@ -3,13 +3,13 @@
   background-color: white;
   grid-template: 2.85em 1.15em 1fr / 1fr;
   width: 50%;
-  margin: 1.5em 0em;
+  margin: 1.5em 0;
   padding: 1em;
   font-family: Roboto, sans-serif;
-  -webkit-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.25);
-  border-radius: .25em;
+  -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 0.25em;
   -webkit-transition: box-shadow 0.1s, width 0.1s;
   -moz-transition: box-shadow 0.1s, width 0.1s;
   -ms-transition: box-shadow 0.1s, width 0.1s;
@@ -17,31 +17,30 @@
   transition: box-shadow 0.1s, width 0.1s;
 }
 
-.card.small .card-content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.card.small .card-details {
-  align-self: center;
-  font-size: 1.1em;
-}
-
-.card.small .image-container {
-  align-self: center;
-  width: 100%;
-}
-
-.card.small .image-container img {
-  height: 100%;
+@media (min-width: 1100px) {
+  .card.small .card-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .card.small .card-details {
+    align-self: center;
+    font-size: 1.1em;
+  }
+  .card.small .image-container {
+    align-self: center;
+    width: 100%;
+  }
+  .card.small .image-container img {
+    height: 100%;
+  }
 }
 
 .card:hover {
   padding: 1.1em 1em;
   width: 50.5%;
-  -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
-  -moz-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
-  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.41);
+  -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.41);
+  -moz-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.41);
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.41);
 }
 
 .card-header {
@@ -64,9 +63,9 @@
   color: white;
   font-size: 1em;
   font-weight: bold;
-  border-radius: .25em;
-  padding: .25em .35em;
-  margin-right: .25em;
+  border-radius: 0.25em;
+  padding: 0.25em 0.35em;
+  margin-right: 0.25em;
 }
 
 .card-buttons {
@@ -113,4 +112,24 @@ ul {
 
 img {
   width: 75%;
+}
+
+@media (max-width: 1100px) {
+  .card {
+    width: 90%;
+    font-size: 3vw;
+  }
+  .card:hover {
+    width: 90%;
+    -webkit-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    padding: 1em;
+  }
+  .card-title {
+    font-size: 4vw;
+  }
+  .card-date {
+    font-size: 2.7vw;
+  }
 }
