--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -68,8 +68,8 @@
   align-items: center;
   justify-content: space-between;
   color: #fafafa;
-  font-family: 'Roboto', sans-serif;
-  font-size: 4em;
+  font-family: 'Noto Sans HK', sans-serif;
+  font-size: 3vw;
 }
 
 #header-text {
@@ -80,7 +80,7 @@
 }
 
 #header-image {
-  width: 250px;
+  width: 25%;
   border-radius: 50%;
   /* border: .1em solid #3F4D63; */
   -webkit-box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
@@ -97,5 +97,18 @@
   -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-decoration: none;
-  color: inherit;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+@media (max-width: 1100px) {
+  #header-text {
+    font-size: 6.5vw;
+  }
+  #header-bottom-text {
+    font-size: 2.5vw;
+  }
+  #header-image {
+    width: 50%;
+  }
 }
