--- a/src/components/Page/PageHeader/PageHeader.scss
+++ b/src/components/Page/PageHeader/PageHeader.scss
@@ -36,8 +36,8 @@
   align-items: center;
   justify-content: space-between;
   color: #fafafa;
-  font-family: 'Roboto', sans-serif;
-  font-size: 4em;
+  font-family: 'Noto Sans HK', sans-serif;
+  font-size: 3vw;
 }
 
 #header-text{
@@ -49,7 +49,7 @@
 }
 
 #header-image{
-  width: 250px;
+  width: 25%;
   border-radius: 50%;
   /* border: .1em solid #3F4D63; */
   -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
@@ -72,4 +72,20 @@
   -webkit-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
   -moz-text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
   text-shadow: 2px 4px 3px rgba(0,0,0,0.15);
+  text-decoration: none;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+}
+
+@media (max-width: 1100px){
+  #header-text{
+    font-size: 6.5vw;
+  }
+  #header-bottom-text{
+    font-size: 2.5vw;
+    // padding-bottom: 2em;
+  }
+  #header-image{
+    width: 50%;
+  }
 }
