--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -1,10 +1,10 @@
 #navbar-grid {
   display: grid;
-  grid-template: 60px / 1fr 1fr 1fr;
+  grid-template: 60px / 1fr 1fr 1fr 1fr 1fr;
   width: 100%;
   background-color: #374457;
   color: #fafafa;
-  font-size: 1.5vw;
+  font-size: 1.25vw;
   font-weight: 300;
   font-family: Roboto, sans-serif;
   border-top: solid 1px #27303D;
@@ -26,19 +26,11 @@
   -ms-transition: background .3s;
   -o-transition: background .3s;
   transition: background .3s;
+  cursor: pointer;
 }
 
-@media (max-width: 1000px){
+@media only screen and (max-width: 1100px){
   #navbar-grid{
-    display: none;
-    font-size: 2vw;
-    /* grid-template: 7em / 1fr 1fr 1fr; */
-    /* font-size: 1em; */
-  }
-  .navbar-link{
-    font-size: 3em;
-  }
-  .navbar-link-text{
     display: none;
   }
 }
