--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
@@ -17,7 +17,7 @@
   transition: box-shadow 0.1s, width 0.1s;
 }
 
-@media (min-width: 1100px) {
+@media only screen and (min-width: 1100px) and (orientation: portrait) {
   .card.small .card-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -114,7 +114,7 @@ img {
   width: 75%;
 }
 
-@media (max-width: 1100px) {
+@media only screen and (max-width: 1100px) and (orientation: portrait) {
   .card {
     width: 90%;
     font-size: 3vw;
