--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
@@ -20,7 +20,7 @@
   border-radius: 0.25em;
   @include transition(box-shadow 0.1s, width 0.1s)
 }
-@media (min-width: 1100px) {
+@media only screen and (min-width: 1100px) and (orientation: portrait) {
   .card.small {
     .card-content {
       display: grid;
@@ -116,7 +116,7 @@ img {
   width: 75%;
 }
 
-@media (max-width: 1100px) {
+@media only screen and (max-width: 1100px) and (orientation: portrait) {
   .card {
     width: 90%;
     font-size: 3vw;
