--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -60,7 +60,7 @@
 
 #header-container {
   background-color: #374457;
-  height: 100vh;
+  height: 92vh;
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
@@ -69,11 +69,11 @@
   justify-content: space-between;
   color: #fafafa;
   font-family: 'Noto Sans HK', sans-serif;
-  font-size: 3vw;
 }
 
 #header-text {
   line-height: 1.25em;
+  font-size: 3vw;
   -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
@@ -90,7 +90,7 @@
 
 #header-bottom-text {
   align-items: flex-end;
-  font-size: .3em;
+  font-size: 1vw;
   line-height: 1em;
   padding-bottom: .25%;
   -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
@@ -101,7 +101,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
-@media (max-width: 1100px) {
+@media only screen and (max-width: 1100px) and (orientation: portrait) {
   #header-text {
     font-size: 6.5vw;
   }
