Minor changes to mobile formatting

--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -60,7 +60,7 @@
 
 #header-container {
   background-color: #374457;
-  height: 92vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-wrap: wrap;
@@ -102,6 +102,9 @@
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
+  #header-container {
+    height: 92vh;
+  }
   #header-text {
     font-size: 6.5vw;
   }
