--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.css
@@ -17,24 +17,6 @@
   transition: box-shadow 0.1s, width 0.1s;
 }
 
-@media only screen and (min-width: 1100px) and (orientation: portrait) {
-  .card.small .card-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .card.small .card-details {
-    align-self: center;
-    font-size: 1.1em;
-  }
-  .card.small .image-container {
-    align-self: center;
-    width: 100%;
-  }
-  .card.small .image-container img {
-    height: 100%;
-  }
-}
-
 .card:hover {
   padding: 1.1em 1em;
   width: 50.5%;
@@ -114,7 +96,41 @@ img {
   width: 75%;
 }
 
+.card.small .card-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card.small .card-details {
+  align-self: center;
+  font-size: 1.1em;
+}
+
+.card.small .image-container {
+  align-self: center;
+  width: 100%;
+}
+
+.card.small .image-container img {
+  height: 100%;
+}
+
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
+  .card.small .card-content {
+    display: flex;
+  }
+  .card.small .card-details {
+    align-self: center;
+    font-size: 1.1em;
+    width: 100%;
+  }
+  .card.small .image-container {
+    align-self: center;
+    width: 100%;
+  }
+  .card.small .image-container img {
+    height: 100%;
+  }
   .card {
     width: 90%;
     font-size: 3vw;
