--- a/src/components/Page/PageBody/About/About.css
+++ b/src/components/Page/PageBody/About/About.css
@@ -11,26 +11,32 @@
   color: #374457;
   font-size: 3em;
   padding: .35em;
+  font-family: Roboto, sans-serif;
 }
 
-.about-text {
+.about-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.about-text p {
+.about-content p {
   line-height: 1.5em;
   font-size: 1.5em;
   text-align: left;
 }
 
-.about-text img {
-  width: 40%;
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  -ms-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  -o-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-  border-radius: .1em;
+.about-content .about-table {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1100px) and (orientation: portrait) {
+  .about-title {
+    font-size: 2em;
+  }
+  .about-text {
+    font-size: .75em;
+  }
 }
