--- a/src/components/Page/PageBody/About/About.scss
+++ b/src/components/Page/PageBody/About/About.scss
@@ -19,9 +19,10 @@
   color: #374457;
   font-size: 3em;
   padding: .35em;
+  font-family: Roboto, sans-serif;
 }
 
-.about-text{
+.about-content{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,10 +33,26 @@
     text-align: left;
   }
 
-  img{
-    width: 40%;
-    @include box-shadow(0 1px 5px rgba(0, 0, 0, 0.46));
-    border-radius: .1em;
-    // background: none repeat scroll 0 0 #E9E9E9;
+  // img{
+  //   width: 40%;
+  //   @include box-shadow(0 1px 5px rgba(0, 0, 0, 0.46));
+  //   border-radius: .1em;
+  //   // background: none repeat scroll 0 0 #E9E9E9;
+  // }
+
+  .about-table{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 1100px) and (orientation: portrait) {
+  .about-title{
+    font-size: 2em;
+  }
+
+  .about-text{
+    font-size: .75em;
   }
 }
