--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -81,6 +81,7 @@
 
 #header-image {
   width: 25%;
+  height: 25%;
   border-radius: 50%;
   /* border: .1em solid #3F4D63; */
   -webkit-box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
