--- a/src/components/Page/PageHeader/PageHeader.scss
+++ b/src/components/Page/PageHeader/PageHeader.scss
@@ -50,6 +50,7 @@
 
 #header-image{
   width: 25%;
+  height: 25%;
   border-radius: 50%;
   /* border: .1em solid #3F4D63; */
   -webkit-box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
