--- a/src/components/Page/PageBody/About/About.css
+++ b/src/components/Page/PageBody/About/About.css
@@ -10,7 +10,7 @@
   font-weight: bold;
   color: #374457;
   font-size: 3em;
-  padding: .35em;
+  padding: 0.35em;
   font-family: Roboto, sans-serif;
 }
 
@@ -19,25 +19,29 @@
   flex-direction: column;
   align-items: center;
 }
-
 .about-content p {
   line-height: 1.5em;
   font-size: 1.5em;
   text-align: left;
 }
-
 .about-content .about-table {
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 95%;
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
+  #about-container {
+    min-height: 0;
+  }
+
   .about-title {
     font-size: 2em;
   }
+
   .about-content {
-    font-size: .75em;
+    font-size: 0.75em;
   }
   .about-content .about-table {
     flex-direction: column;
@@ -46,3 +50,5 @@
     width: 75%;
   }
 }
+
+/*# sourceMappingURL=About.css.map */
