--- a/src/components/Page/PageBody/About/About.scss
+++ b/src/components/Page/PageBody/About/About.scss
@@ -44,10 +44,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 95%;
   }
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
+  #about-container{
+    min-height: 0;
+  }
   .about-title{
     font-size: 2em;
   }
