--- a/src/components/Page/PageHeader/PageHeader.css
+++ b/src/components/Page/PageHeader/PageHeader.css
@@ -12,7 +12,6 @@
     margin-top: 0px;
   }
 }
-
 @-moz-keyframes fade-in {
   0% {
     opacity: 0;
@@ -27,7 +26,6 @@
     margin-top: 0px;
   }
 }
-
 @-o-keyframes fade-in {
   0% {
     opacity: 0;
@@ -42,7 +40,6 @@
     margin-top: 0px;
   }
 }
-
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -57,7 +54,6 @@
     margin-top: 0px;
   }
 }
-
 #header-container {
   background-color: #374457;
   height: 100vh;
@@ -68,7 +64,7 @@
   align-items: center;
   justify-content: space-between;
   color: #fafafa;
-  font-family: 'Noto Sans HK', sans-serif;
+  font-family: "Noto Sans HK", sans-serif;
 }
 
 #header-text {
@@ -93,26 +89,31 @@
   align-items: flex-end;
   font-size: 1vw;
   line-height: 1em;
-  padding-bottom: .25%;
+  padding-bottom: 0.25%;
   -webkit-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   -moz-text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.15);
   text-decoration: none;
   color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
   #header-container {
     height: 92vh;
   }
+
   #header-text {
     font-size: 6.5vw;
   }
+
   #header-bottom-text {
     font-size: 2.5vw;
   }
+
   #header-image {
     width: 50%;
   }
 }
+
+/*# sourceMappingURL=PageHeader.css.map */
