--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -18,12 +18,71 @@
   -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   border-radius: 0.25em;
-  @include transition(box-shadow .2s);
+  // cursor: pointer;
+  @include transition(box-shadow .1s);
+  @include transition(width 0.3s);
   
+  .expanded-text{
+    height: auto;
+    max-height: 0px;
+    overflow: hidden;
+    @include transition(max-height .3s);
+  }
+
+  .normal-text{
+    height: auto;
+    max-height: 100vh;
+    overflow: hidden;
+    @include transition(max-height .3s);
+  }
+
   &:hover {
     -webkit-box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
     -moz-box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
     box-shadow: 0 0 4px 3px rgba(0,0,0,0.25);
+  }
+  
+  &.small {
+    // cursor: default;
+    .card-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    
+    .card-details {
+      align-self: flex-start;
+      font-size: 1.1em;
+    }
+    
+    .image-container {
+      align-self: center;
+      width: 100%;
+  
+      img {
+        height: 100%;
+      }
+    }
+  }
+
+  &.large{
+    width: 75%;
+    cursor: pointer;
+
+    .card-content{
+      align-content: center;
+    }
+
+    .image-container{
+      justify-content: center;
+      width: 50%;
+    }
+
+    .expanded-text{
+      max-height: 100vh;
+    }
+    .normal-text{
+      max-height: 0;
+    }
   }
 }
 
@@ -69,12 +128,13 @@
 .card-content {
   grid-row: 3;
   display: flex;
-  justify-content: center;
-  color: black;
   flex-direction: column;
+  align-items: center;
+  color: black;
 }
 
 .card-details {
+  align-self: flex-start;
   font-size: 1.25em;
   line-height: 1.5em;
 }
@@ -86,31 +146,11 @@ ul {
 .image-container {
   width: 100%;
   text-align: center;
+  @include transition(width 0.3s);
 }
 
 img {
   width: 75%;
-}
-
-.card.small {
-  .card-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .card-details {
-    align-self: flex-start;
-    font-size: 1.1em;
-  }
-
-  .image-container {
-    align-self: center;
-    width: 100%;
-
-    img {
-      height: 100%;
-    }
-  }
 }
 
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
