--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -18,7 +18,6 @@
   -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   border-radius: 0.25em;
-  // cursor: pointer;
   @include transition(box-shadow .1s);
   @include transition(width 0.3s);
   
@@ -66,7 +65,6 @@
 
   &.large{
     width: 75%;
-    cursor: pointer;
 
     .card-content{
       align-content: center;
@@ -93,6 +91,10 @@
   grid-area: 1/1;
 }
 
+.card-header-details{
+  display: flex;
+}
+
 .card-title {
   display: inline;
   font-weight: bold;
@@ -101,6 +103,7 @@
 }
 .card-header-language {
   display: inline-flex;
+  justify-content: center;
   background-color: #fbbd08;
   color: white;
   font-size: 1em;
