--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -18,7 +18,11 @@
   -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   border-radius: 0.25em;
-  @include transition(box-shadow .1s);
+  -webkit-transition: box-shadow 0.2s, width 0.3s;
+  -moz-transition: box-shadow 0.2s, width 0.3s;
+  -ms-transition: box-shadow 0.2s, width 0.3s;
+  -o-transition: box-shadow 0.2s, width 0.3s;
+  transition: box-shadow 0.2s, width 0.3s;
   
   .expanded-text{
     height: auto;
