--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.css
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.css
@@ -64,7 +64,7 @@
 }
 .card.large .image-container {
   justify-content: center;
-  width: 50%;
+  width: 75%;
 }
 .card.large .expanded-text {
   max-height: 100vh;
@@ -174,6 +174,12 @@ img {
   .card {
     width: 90%;
     font-size: 3vw;
+  }
+  .card.large {
+    width: 90%;
+  }
+  .card.large .image-container {
+    width: 100%;
   }
 
   .card:hover {
