Updated measurement units to be rem

--- a/src/components/Page/Navbar/Navbar.css
+++ b/src/components/Page/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #374457;
   color: #fafafa;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 300;
   font-family: Roboto, sans-serif;
   border-top: solid 1px #27303D;
