--- a/src/components/Page/PageBody/About/About.css
+++ b/src/components/Page/PageBody/About/About.css
@@ -9,7 +9,7 @@
   text-align: center;
   font-weight: bold;
   color: #374457;
-  font-size: 3em;
+  font-size: 3rem;
   padding: 0.35em;
   font-family: Roboto, sans-serif;
 }
@@ -20,8 +20,8 @@
   align-items: center;
 }
 .about-content p {
-  line-height: 1.5em;
-  font-size: 1.5em;
+  line-height: 1.5rem;
+  font-size: 1.5rem;
   text-align: left;
 }
 .about-content .about-table {
@@ -37,11 +37,11 @@
   }
 
   .about-title {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   .about-content {
-    font-size: 0.75em;
+    font-size: 0.75rem;
   }
   .about-content .about-table {
     flex-direction: column;
