--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -9,15 +9,15 @@
 .card {
   display: grid;
   background-color: white;
-  grid-template: 2.85em 1.15em 1fr / 1fr;
+  grid-template: 2.85rem 1.15rem 1fr / 1fr;
   width: 50%;
-  margin: 1.5em 0;
-  padding: 1em;
+  margin: 1.5rem 0;
+  padding: 1rem;
   font-family: Roboto, sans-serif;
   -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
   box-shadow: 0 0 3px 1px rgba(0,0,0,0.25);
-  border-radius: 0.25em;
+  border-radius: 0.25rem;
   -webkit-transition: box-shadow 0.2s, width 0.3s;
   -moz-transition: box-shadow 0.2s, width 0.3s;
   -ms-transition: box-shadow 0.2s, width 0.3s;
@@ -52,7 +52,7 @@
     
     .card-details {
       align-self: flex-start;
-      font-size: 1.1em;
+      font-size: 1.1rem;
     }
     
     .image-container {
@@ -101,18 +101,18 @@
   display: inline;
   font-weight: bold;
   color: #374457;
-  font-size: 2em;
+  font-size: 2rem;
 }
 .card-header-language {
   display: inline-flex;
   justify-content: center;
   background-color: #fbbd08;
   color: white;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: bold;
-  border-radius: 0.25em;
-  padding: 0.25em 0.35em;
-  margin-right: 0.25em;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.35rem;
+  margin-right: 0.25rem;
 }
 
 .card-buttons {
@@ -127,7 +127,7 @@
   font-weight: 300;
   color: black;
   grid-row: 2;
-  font-size: 1.05em;
+  font-size: 1.05rem;
 }
 
 .card-content {
@@ -140,8 +140,8 @@
 
 .card-details {
   align-self: flex-start;
-  font-size: 1.25em;
-  line-height: 1.5em;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
 }
 
 ul {
@@ -166,7 +166,7 @@ img {
 
     .card-details {
       align-self: center;
-      font-size: 1.1em;
+      font-size: 1.1rem;
       width: 100%;
     }
 
